<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#77FFBBAA">

    <TextView
        android:id="@+id/location_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/location"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/location_scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/location_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/auckland_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/auckland_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auckland" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wellington_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wellington" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/queenstown_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queenstown" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/christchurch_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/christchurch" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/hamilton_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hamilton" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tauranga_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tauranga" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dunedin_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dunedin" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/palmerston_north_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/palmerston_north" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/rotorua_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotorua" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/food_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/food_type"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_scrollView" />

    <HorizontalScrollView
        android:id="@+id/food_type_scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_type_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/food_type_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/all_types_food_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/all_types_food_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurants" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/burgers_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burgers" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/italian_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/italian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chinese_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/indian_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/thai_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thai" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/mexican_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mexican" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/japanese_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/korean_chip"
                    style="@style/TastyChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/search"
        android:backgroundTint="@color/lightRed"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_type_scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>